syntax = "proto3";

option csharp_namespace = "Cogito.Kademlia.Protocols.Protobuf";

message Packet {
    uint64 network = 1;
    repeated Message messages = 2;
}

message Message {
    Header header = 1;
    oneof body {
        PingRequest ping_request = 3;
        PingResponse ping_response = 4;
        StoreRequest store_request = 5;
        StoreResponse store_response = 6;
        FindNodeRequest find_node_request = 7;
        FindNodeResponse find_node_response = 8;
        FindValueRequest find_value_request = 9;
        FindValueResponse find_value_response = 10;
    }
}

message Header {
    bytes sender = 2;
    uint64 magic = 3;
}

message IpAddress {
    oneof ip_address {
        fixed32 v4 = 1;
        bytes v6 = 2;
    }
}

message IpEndpoint {
    IpAddress address = 1;
    uint32 port = 2;
}

message Peer {
    bytes id = 1;
    repeated IpEndpoint endpoints = 2;
}

message PingRequest {
    repeated IpEndpoint endpoints = 1;
}

message PingResponse {
    repeated IpEndpoint endpoints = 1;
}

message StoreRequest {
    bytes key = 1;
    bytes value = 2;
}

message StoreResponse {
    enum StoreResponseCode {
        Stored = 0;
        NotStored = 1;
    }

    bytes key = 1;
    StoreResponseCode code = 2;
}

message FindNodeRequest {
    bytes key = 1;
}

message FindNodeResponse {
    bytes key = 1;
    repeated Peer peers = 2;
}

message FindValueRequest {
    bytes key = 1;
}

message FindValueResponse {
    enum FindValueResponseCode {
        Found = 0;
        NotFound = 1;
    }
    bytes key = 1;
    repeated Peer peers = 2;
    FindValueResponseCode code = 3;
    bytes value = 4;
}

